--- a/BTSelenium/finaltesst.ipynb
+++ b/BTSelenium/finaltesst.ipynb
@@ -62,23 +62,38 @@
     "\n",
     "    # Duyệt qua danh sách họa sĩ và lấy thông tin\n",
     "    for painter in painters:\n",
+    "        # Lấy text của painter\n",
     "        text = painter.text\n",
+    "        # chia text thành các phần bằng dấu phẩy\n",
     "        parts = text.split(',')\n",
+    "        # kiểm tra danh sách đã chia có 2 phần 2 không\n",
     "        if len(parts) >= 2:\n",
+    "            # chia phần đầu tiên của danh sách bằng dấu mở ngoặc tròn \n",
     "            name_age = parts[0].split('(')\n",
+    "            # lấy tên và loại bỏ khoảng trắng\n",
     "            name = name_age[0].strip()\n",
+    "            # kiểm tra name_age có 1 phần hay không\n",
     "            if len(name_age) == 1:\n",
+    "                # nếu không có dấu mở ngoặc tròn thì gán biến birth_death là none\n",
     "                birth_death = None\n",
     "            else:\n",
+    "                # Lấy năm sinh năm mất và bỏ dấu đóng ngoặc tròn\n",
     "                birth_death = name_age[1].strip(\")\")\n",
+    "                # kiểm tra ký tự số trong birth_death và số phần trong parts\n",
     "                if all(char not in '0123456789' for char in birth_death) and len(parts) >= 3:\n",
+    "                    # nếu không có số thì gán giá trị phần thứ 2 vào birth_death\n",
     "                    birth_death = parts[1].strip(\")\")\n",
+    "                    # chia phần thứ 3 thành danh sách từ \n",
     "                    full_info = parts[2].split(\" \")\n",
+    "                    # lấy quốc tịch từ phần thứ 2 của full_info\n",
     "                    nationality = full_info[1].strip()\n",
     "                else:\n",
+    "                    # chia phần thứ 2 thành danh sách từ\n",
     "                    full_info = parts[1].split(\" \")\n",
+    "                    # lấy quốc tíchj từ phần thứ 2 của full_info\n",
     "                    nationality = full_info[1].strip()\n",
     "        else:\n",
+    "            # trả về none\n",
     "            nationality = None\n",
     "            birth_death = None\n",
     "\n",
